deploy: 357071d0e6e0c88f0d58b9ac7e92566c40ac055c

--- a/slides/hackathon/hackathon.html
+++ b/slides/hackathon/hackathon.html
@@ -497,10 +497,10 @@ document.write(`
 <hr class="docutils" />
 <div class="columns">
 <div>
-<p><img alt="" src="../results/figs/transport/nblast.png" /></p>
+<p><img alt="" src="../../_images/nblast.png" /></p>
 </div>
 <div>
-<p><img alt="" src="../results/figs/transport/lap_solution.png" /></p>
+<p><img alt="" src="../../_images/lap_solution.png" /></p>
 </div>
 </div>
 </section>
@@ -527,10 +527,10 @@ document.write(`
 <hr class="docutils" />
 <div class="columns">
 <div>
-<p><img alt="" src="../results/figs/transport/nblast.png" /></p>
+<p><img alt="" src="../../_images/nblast.png" /></p>
 </div>
 <div>
-<p><img alt="" src="../results/figs/transport/noisy_emd_solution.png" /></p>
+<p><img alt="" src="../../_images/noisy_emd_solution.png" /></p>
 </div>
 </div>
 </section>
@@ -550,10 +550,10 @@ document.write(`
 <hr class="docutils" />
 <div class="columns">
 <div>
-<p><img alt="" src="../results/figs/transport/nblast.png" /></p>
+<p><img alt="" src="../../_images/nblast.png" /></p>
 </div>
 <div>
-<p><img alt="" src="../results/figs/transport/sinkhorn_solution.png" /></p>
+<p><img alt="" src="../../_images/sinkhorn_solution.png" /></p>
 </div>
 </div>
 </section>
@@ -582,11 +582,11 @@ We seek a set of "flows" $f_{ij}$ which minimizes the overall cost
 $$\min_F \sum_{ij} f_{ij} d_{ij} = trace(F^TD)$$ -->
 <!-- If $D_{ij}$ is the NBLAST cost of matching $i$ and $j$... -->
 <hr class="docutils" />
-<p><img alt="center h:600" src="../results/figs/transport/composite_view_2.png" /></p>
+<p><img alt="center h:600" src="../../_images/composite_view_2.png" /></p>
 <hr class="docutils" />
-<p><img alt="center h:600" src="../results/figs/transport/composite_view_3.png" /></p>
+<p><img alt="center h:600" src="../../_images/composite_view_3.png" /></p>
 <hr class="docutils" />
-<p><img alt="center h:600" src="../results/figs/transport/composite_view_4.png" /></p>
+<p><img alt="center h:600" src="../../_images/composite_view_4.png" /></p>
 </section>
 <hr class="docutils" />
 <section class="tex2jax_ignore mathjax_ignore" id="what-if-we-want-to-include-connectivity">
